# Subtitles-AI

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  deep-research-report.md  logo.xml  main.py  pyproject.toml
src/: __init__.py
src/config/: __init__.py  config.py  storage.py
src/core/: __init__.py  audio_extractor.py  downloader.py  ffmpeg_utils.py  srt_utils.py  subtitle_burner.py  transcriber.py  translator.py
src/handler/: __init__.py  app.py  deps.py  health.py  schemas.py  srt.py  tasks.py
src/service/: orchestrator.py  runner.py
src/service/srt/: replicate_schema.py
src/store/: __init__.py  task_store.py
tests/: test_api.py  test_audio_extractor.py  test_cli.py  test_downloader.py  test_live_pipeline.py  test_orchestrator.py  test_runner.py  test_srt_utils.py  test_subtitle_burner.py  test_task_store.py  test_transcriber.py  test_translator.py
web/: __preview_test.html  app.js  config.js  index.html  styles.css
web/js/: api.js  constants.js  main.js  store.js  theme.js  toast.js  ui-console.js  ui-preview.js  ui-probe.js  ui-queue.js  ui-shell.js  utils.js
web/styles/: base.css  console.css  layout.css  preview.css  probe.css  queue.css
