[project]
name = "subtrans-backend"
version = "0.1.0"
description = "视频字幕翻译工作台 - 后端（下载 / 识别 / 翻译 / 烧录流水线）"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.138.2",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "replicate>=1.0.7",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2024.0.0",
    # 后续阶段再加：fastapi, uvicorn, rq, redis ...
]

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
